--- a/people/templates/people/noble_rank_edit.html
+++ b/people/templates/people/noble_rank_edit.html
@@ -4,8 +4,8 @@
 
 {% block content %}
     <div class="well well-large">
-        <h1>Person</h1>
-        <form method="POST" class="person-form">{% csrf_token %}
+        <h1>Noble Rank</h1>
+        <form method="POST" class="noble-rank-form">{% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="save btn btn-default">Save</button>
         </form>
