--- a/people/templates/people/people.html
+++ b/people/templates/people/people.html
@@ -1,15 +1,81 @@
 <!DOCTYPE html>
 
-{% extends 'people/base.html' %}
+{% extends 'table.html' %}
 
-{% block content %}
+{% block nav %}
+<div class="navbar-inner">
+    <a class="brand"></a>
+    <ul class="nav">
+        <li class="active">
+            <button class="btn" onclick="location.href='{% url 'people:noble_ranks' %}';">
+                Noble Ranks
+            </button>
+        </li>
+    </ul>
+</div>
+{% endblock %}
+
+{% block table_header %}
+    <th class="th_ccell"><h4></h4></th>
+    <th class="th_lcell"><h4>RANK</h4></th>
+    <th class="th_lcell"><h4>NAME</h4></th>
+    <th class="th_ccell"><h4>STR</h4></th>
+    <th class="th_ccell"><h4>DEX</h4></th>
+    <th class="th_ccell"><h4>CON</h4></th>
+    <th class="th_ccell"><h4>INT</h4></th>
+    <th class="th_ccell"><h4>WIS</h4></th>
+    <th class="th_ccell"><h4>CHA</h4></th>
+    <th class="th_ccell"><h4>NOTES</h4></th>
+    <th class="th_ccell"><h4></h4></th>
+{% endblock %}
+
+{% block table_body %}
     {% for person in people %}
-        <div class="person">
-            <div class="name">
-                <p>Name: {{ person.first_name }} {{ person.last_name }}</p>
-            </div>
-            <h1><a href="{% url 'person_detail' pk=person.pk %}">{{ person.noble_rank }}</a></h1>
-            <p>{{ person.notes|linebreaksbr }}</p>
-        </div>
+        <tr>
+            <td class="tb_ccell">
+                {% if person.noble_rank is not None %}
+                    {% if person.gender.name == "Female" %}
+                        {{ person.noble_rank.female_honorific }}
+                    {% else %}
+                        {{ person.noble_rank.male_honorific }}
+                    {% endif %}
+                {% endif %}
+            </td>
+            <td class="tb_ccell">
+                {% if person.noble_rank is not None %}
+                    {% if person.gender.name == "Female" %}
+                        {{ person.noble_rank.female_title }}
+                    {% else %}
+                        {{ person.noble_rank.male_title }}
+                    {% endif %}
+                {% endif %}
+            </td>
+            <td class="tb_lcell">
+                {{ person.first_name }} {{ person.last_name }}
+            </td>
+            <td class="tb_ccell">{{ person.str }}</td>
+            <td class="tb_ccell">{{ person.dex }}</td>
+            <td class="tb_ccell">{{ person.con }}</td>
+            <td class="tb_ccell">{{ person.int }}</td>
+            <td class="tb_ccell">{{ person.wis }}</td>
+            <td class="tb_ccell">{{ person.cha }}</td>
+            <td class="tb_lcell">{{ person.notes }}</td>
+            <td class="tb_ccell">
+                {% if user.is_authenticated %}
+                    <a class="btn btn-default" href="{% url 'people:person_edit' pk=person.pk %}">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </a>
+                    <a class="btn btn-default" href="{% url 'people:person_delete' pk=person.pk %}">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </a>
+                {% endif %}
+            </td>
+        </tr>
     {% endfor %}
+{% endblock %}
+
+{% block table_new_item %}
+    <a class="btn btn-default" href="{% url 'people:person_new' %}">
+        <div><span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;&nbsp;New</div>
+    </a>
 {% endblock %}
