--- a/people/templates/people/noble_ranks.html
+++ b/people/templates/people/noble_ranks.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-{% extends 'table.html' %}
+{% extends 'people/base.html' %}
 
 {% block table_header %}
     <th class="th_ccell"><h4>EQUIVALENT RANK</h4></th>
