--- a/people/templates/people/person_edit.html
+++ b/people/templates/people/person_edit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-{% extends 'base.html' %}
+{% extends 'people/base.html' %}
 
 {% block content %}
     <div class="well well-large">
