Finalized some styling and design structure.

--- a/people/templates/people/noble_ranks.html
+++ b/people/templates/people/noble_ranks.html
@@ -8,7 +8,7 @@
     <th class="th_ccell"><h4>FEMALE TITLE</h4></th>
     <th class="th_ccell"><h4>MALE HONORIFIC</h4></th>
     <th class="th_ccell"><h4>FEMALE HONORIFIC</h4></th>
-    <th class="th_ccell"><h4>DESCRIPTION</h4></th>
+    <th class="th_lcell"><h4>DESCRIPTION</h4></th>
     <th class="th_ccell"><h4></h4></th>
 {% endblock %}
 
