--- a/templates/table.html
+++ b/templates/table.html
@@ -4,10 +4,7 @@
 
 {% block content %}
     <div class="well well-large">
-        <table class="table-custom">
-            <caption class="table-header" style="text-align:left">
-                <h1>{{ title }}</h1>
-            </caption>
+        <table>
             <thead>
             <tr>
                 {% block table_header %}
