--- a/people/templates/people/base.html
+++ b/people/templates/people/base.html
@@ -2,20 +2,12 @@
 
 {% extends 'table.html' %}
 
-{% block nav %}
-<div class="navbar-inner">
-    <a class="brand"></a>
-    <ul class="nav">
-        <li class="active">
-            <button class="btn" onclick="location.href='{% url 'people:noble_ranks' %}';">
-                Noble Ranks
-            </button>
-        </li>
-        <li class="active">
-            <button class="btn" onclick="location.href='{% url 'people:awards' %}';">
-                Awards
-            </button>
-        </li>
-    </ul>
-</div>
+{% block subnav_items %}
+<li class="disabled"><a href="#">|</a></li>
+<li role="presentation"><a href="{% url 'people:noble_ranks' %}">
+    Noble Ranks
+</a></li>
+<li role="presentation"><a href="{% url 'people:awards' %}">
+    Awards
+</a></li>
 {% endblock %}
