--- a/people/templates/people/person_edit.html
+++ b/people/templates/people/person_edit.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="well well-large">
         <h1>Person</h1>
-        <form method="POST" class="person-form">{% csrf_token %}
+        <form method="POST" class="navbar-form navbar-left">{% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="save btn btn-default">Save</button>
         </form>
