Added database as part of code-base (for consistency in single deployment). Added data modeling and basic views for territory app.

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
                 <ul class="nav nav-pills">
                     <li role="presentation"><a href="{% url 'core:home' %}">Home</a></li>
                     <li role="presentation"><a href="{% url 'people:people' %}">People</a></li>
+                    <li role="presentation"><a href="{% url 'territory:territories' %}">
+                        Territories
+                    </a></li>
                     {% block subnav_items %}{% endblock %}
                 </ul>
             </div>
