--- a/territory/templates/territory/features.html
+++ b/territory/templates/territory/features.html
@@ -4,6 +4,7 @@
 
 {% block table_header %}
     <th class="th_ccell"><h4>NAME</h4></th>
+    <th class="th_ccell"><h4>DESCRIPTION</h4></th>
     <th class="th_ccell"><h4></h4></th>
 {% endblock %}
 
@@ -11,11 +12,23 @@
     {% for feature in features %}
         <tr>
             <td class="tb_ccell">{{ feature.name }}</td>
+            <td class="tb_lcell" width="80%">{{ feature.desc }}</td>
             <td class="tb_ccell">
+                {% if user.is_authenticated %}
+                    <a class="btn btn-default" href="{% url 'territory:feature_edit' pk=feature.pk %}">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </a>
+                    <a class="btn btn-default" href="{% url 'territory:feature_delete' pk=feature.pk %}">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </a>
+                {% endif %}
             </td>
         </tr>
     {% endfor %}
 {% endblock %}
 
 {% block table_new_item %}
+    <a class="btn btn-default" href="{% url 'territory:feature_new' %}">
+        <div><span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;&nbsp;New</div>
+    </a>
 {% endblock %}
