--- a/territory/templates/territory/territories.html
+++ b/territory/templates/territory/territories.html
@@ -15,13 +15,24 @@
         <tr>
             <td class="tb_ccell">{{ territory.hex }}</td>
             <td class="tb_ccell">{{ territory.type }}</td>
-            <td class="tb_ccell">{{ territory.features }}</td>
-            <td class="tb_ccell">{{ territory.improvements }}</td>
+            <td class="tb_ccell">{{ territory.features.all|join:", " }}</td>
+            <td class="tb_ccell">{{ territory.improvements.all|join:", " }}</td>
             <td class="tb_ccell">
+                {% if user.is_authenticated %}
+                    <a class="btn btn-default" href="{% url 'territory:territory_edit' pk=territory.pk %}">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </a>
+                    <a class="btn btn-default" href="{% url 'territory:territory_delete' pk=territory.pk %}">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </a>
+                {% endif %}
             </td>
         </tr>
     {% endfor %}
 {% endblock %}
 
 {% block table_new_item %}
+    <a class="btn btn-default" href="{% url 'territory:territory_new' %}">
+        <div><span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;&nbsp;New</div>
+    </a>
 {% endblock %}
