--- a/templates/base.html
+++ b/templates/base.html
@@ -25,10 +25,21 @@
                 <ul class="nav nav-pills">
                     <li role="presentation"><a href="{% url 'core:home' %}">Home</a></li>
                     <li role="presentation"><a href="{% url 'people:people' %}">People</a></li>
-                    <li role="presentation"><a href="{% url 'territory:territories' %}">
-                        Territories
-                    </a></li>
+                    <li role="presentation">
+                        <a href="{% url 'territory:territories' %}">
+                            Territories
+                        </a>
+                    </li>
                     {% block subnav_items %}{% endblock %}
+                </ul>
+                <ul class="nav nav-pills navbar-right">
+                    <li role="presentation">
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'logout' %}">Logout</a>
+                        {% else %}
+                            <a href="{% url 'login' %}">Login</a>
+                        {% endif %}
+                    </li>
                 </ul>
             </div>
         </div>
