--- a/territory/templates/territory/territories.html
+++ b/territory/templates/territory/territories.html
@@ -7,6 +7,7 @@
     <th class="th_ccell"><h4>TYPE</h4></th>
     <th class="th_ccell"><h4>FEATURES</h4></th>
     <th class="th_ccell"><h4>IMPROVEMENTS</h4></th>
+    <th class="th_ccell"><h4>EFFECTS</h4></th>
     <th class="th_ccell"><h4></h4></th>
 {% endblock %}
 
@@ -17,6 +18,7 @@
             <td class="tb_ccell">{{ territory.type }}</td>
             <td class="tb_ccell">{{ territory.features.all|join:", " }}</td>
             <td class="tb_ccell">{{ territory.improvements.all|join:", " }}</td>
+            <td class="tb_ccell">{{ territory.effects_summary }}</td>
             <td class="tb_ccell">
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'territory:territory_edit' pk=territory.pk %}">
