--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
                 <a class="brand">Kingmaker5E</a>
                 <ul class="nav nav-pills">
                     <li role="presentation"><a href="{% url 'core:home' %}">Home</a></li>
+                    <li role="presentation"><a href="{% url 'polity:polities' %}">Polities</a></li>
                     <li role="presentation"><a href="{% url 'people:people' %}">People</a></li>
                     <li role="presentation">
                         <a href="{% url 'territory:territories' %}">
