--- a/people/templates/people/people.html
+++ b/people/templates/people/people.html
@@ -6,6 +6,7 @@
     <th class="th_ccell"><h4></h4></th>
     <th class="th_lcell"><h4>RANK</h4></th>
     <th class="th_lcell"><h4>NAME</h4></th>
+    <th class="th_lcell"><h4>AWARDS</h4></th>
     <th class="th_ccell"><h4>STR</h4></th>
     <th class="th_ccell"><h4>DEX</h4></th>
     <th class="th_ccell"><h4>CON</h4></th>
@@ -40,6 +41,7 @@
             <td class="tb_lcell">
                 {{ person.first_name }} {{ person.last_name }}
             </td>
+            <td class="tb_ccell">{{ person.awards.all|join:", " }}</td>
             <td class="tb_ccell">{{ person.str }}</td>
             <td class="tb_ccell">{{ person.dex }}</td>
             <td class="tb_ccell">{{ person.con }}</td>
