--- a/people/templates/people/people.html
+++ b/people/templates/people/people.html
@@ -14,6 +14,7 @@
     <th class="th_ccell"><h4>WIS</h4></th>
     <th class="th_ccell"><h4>CHA</h4></th>
     <th class="th_ccell"><h4>NOTES</h4></th>
+    <th class="th_ccell"><h4>POLITY</h4></th>
     <th class="th_ccell"><h4></h4></th>
 {% endblock %}
 
@@ -49,6 +50,7 @@
             <td class="tb_ccell">{{ person.wis }}</td>
             <td class="tb_ccell">{{ person.cha }}</td>
             <td class="tb_lcell">{{ person.notes }}</td>
+            <td class="tb_lcell">{{ person.polity.name }}</td>
             <td class="tb_ccell">
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'people:person_edit' pk=person.pk %}">
