--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,11 @@
                     {% block subnav_items %}{% endblock %}
                 </ul>
                 <ul class="nav nav-pills navbar-right">
+                    {% if user.is_authenticated %}
+                        <li role="presentation">
+                            <a href="{% url 'admin:index' %}">Admin</a>
+                        </li>
+                    {% endif %}
                     <li role="presentation">
                         {% if user.is_authenticated %}
                             <a href="{% url 'logout' %}">Logout</a>
