--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -3,26 +3,104 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="panel panel-primary">
+    <div class="panel panel-primary" style="display: inline-block;">
         <div class="panel-heading">
             <h3 style="color: #ffffff; text-align: center; ">Polity Attributes</h3>
         </div>
         <div class="panel-body">
-            <table>
-            <thead>
-                <tr>
-                    <th class="th_ccell"><h4></h4></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="tb_ccell"></td>
-                </tr>
-            </tbody>
-        </table>
+            <table style="float: left;">
+                <tbody>
+                    <tr>
+                        <td class="tb_lcell"><h4>ALIGNMENT</h4></td>
+                        <td class="tb_ccell">Lawful Neutral</td>
+                    </tr>
+                    <tr>
+                        <td class="tb_lcell"><h4>GOVERNMENT</h4></td>
+                        <td class="tb_ccell">Feudal Monarchy</td>
+                    </tr>
+                </tbody>
+            </table>
+            <table style="float: right;">
+                <tbody>
+                    <tr>
+                        <td class="tb_lcell"><h4>POPULATION</h4></td>
+                        <td class="tb_ccell">150</td>
+                    </tr>
+                    <tr>
+                        <td class="tb_lcell"><h4>CONTROL DC</h4></td>
+                        <td class="tb_ccell">21</td>
+                    </tr>
+                </tbody>
+            </table>
+            <table style="margin: 0 auto; ">
+                <tbody>
+                    <tr>
+                        <td class="tb_ccell"><h4>SIZE</h4></td>
+                        <td class="tb_ccell">1</td>
+                    </tr>
+                </tbody>
+            </table>
+            <table style="margin: 0 auto; ">
+                <thead>
+                    <tr>
+                        <th class="th_ccell"><h4>ECONOMY</h4></th>
+                        <th class="th_ccell"><h4>LOYALTY</h4></th>
+                        <th class="th_ccell"><h4>STABILITY</h4></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="tb_ccell">{{ polity.economy.total }}</td>
+                        <td class="tb_ccell">{{ polity.loyalty.total }}</td>
+                        <td class="tb_ccell">{{ polity.stability.total }}</td>
+                    </tr>
+                    <tr>
+                        <td class="tb_ccell">{{ polity.economy.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.loyalty.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.stability.source_summary }}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <table style="margin: 0 auto; ">
+                <thead>
+                    <tr>
+                        <th class="th_ccell"><h4>FAME</h4></th>
+                        <th class="th_ccell"><h4>INFAMY</h4></th>
+                        <th class="th_ccell"><h4>CORRUPTION</h4></th>
+                        <th class="th_ccell"><h4>CRIME</h4></th>
+                        <th class="th_ccell"><h4>LAW</h4></th>
+                        <th class="th_ccell"><h4>LORE</h4></th>
+                        <th class="th_ccell"><h4>PRODUCTIVITY</h4></th>
+                        <th class="th_ccell"><h4>SOCIETY</h4></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="tb_ccell">{{ polity.fame.total }}</td>
+                        <td class="tb_ccell">{{ polity.infamy.total }}</td>
+                        <td class="tb_ccell">{{ polity.corruption.total }}</td>
+                        <td class="tb_ccell">{{ polity.crime.total }}</td>
+                        <td class="tb_ccell">{{ polity.law.total }}</td>
+                        <td class="tb_ccell">{{ polity.lore.total }}</td>
+                        <td class="tb_ccell">{{ polity.productivity.total }}</td>
+                        <td class="tb_ccell">{{ polity.society.total }}</td>
+                    </tr>
+                    <tr>
+                        <td class="tb_ccell">{{ polity.fame.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.loyalty.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.infamy.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.corruption.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.crime.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.law.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.lore.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.productivity.source_summary }}</td>
+                        <td class="tb_ccell">{{ polity.society.source_summary }}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
-    <div class="panel panel-primary">
+    <div class="panel panel-primary" style="display: inline-block;">
         <div class="panel-heading">
             <h3 style="color: #ffffff; text-align: center; ">Leadership</h3>
         </div>
