Added calculations for government and alignment of polity to total attribute values.

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -55,9 +55,9 @@
                         <td class="tb_ccell">{{ polity.stability.total }}</td>
                     </tr>
                     <tr>
-                        <td class="tb_ccell">{{ polity.economy.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.loyalty.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.stability.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.economy.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.loyalty.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.stability.source_summary }}</td>
                     </tr>
                 </tbody>
             </table>
@@ -86,15 +86,14 @@
                         <td class="tb_ccell">{{ polity.society.total }}</td>
                     </tr>
                     <tr>
-                        <td class="tb_ccell">{{ polity.fame.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.loyalty.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.infamy.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.corruption.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.crime.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.law.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.lore.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.productivity.source_summary }}</td>
-                        <td class="tb_ccell">{{ polity.society.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.fame.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.infamy.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.corruption.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.crime.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.law.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.lore.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.productivity.source_summary }}</td>
+                        <td class="tb_lcell">{{ polity.society.source_summary }}</td>
                     </tr>
                 </tbody>
             </table>
