--- a/polity/templates/polity/polities.html
+++ b/polity/templates/polity/polities.html
@@ -7,6 +7,10 @@
     <th class="th_ccell"><h4>FORM OF GOVERNMENT</h4></th>
     <th class="th_ccell"><h4>ALIGNMENT</h4></th>
     <th class="th_ccell"><h4>DESCRIPTION</h4></th>
+    <th class="th_ccell"><h4>RULER ATTRIBUTE 1</h4></th>
+    <th class="th_ccell"><h4>RULER ATTRIBUTE 2</h4></th>
+    <th class="th_ccell"><h4>RULER ATTRIBUTE 3</h4></th>
+    <th class="th_ccell"><h4>SPYMASTER ATTRIBUTE</h4></th>
     <th class="th_ccell"><h4></h4></th>
 {% endblock %}
 
@@ -23,6 +27,10 @@
                 {% endif %}
             </td>
             <td class="tb_ccell">{{ polity.desc }}</td>
+            <td class="tb_ccell">{{ polity.ruler_attribute_1.name }}</td>
+            <td class="tb_ccell">{{ polity.ruler_attribute_2.name }}</td>
+            <td class="tb_ccell">{{ polity.ruler_attribute_3.name }}</td>
+            <td class="tb_ccell">{{ polity.spymaster_attribute.name }}</td>
             <td class="tb_ccell">
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'polity:polity_edit' pk=polity.pk %}">
